[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/start_menu/Start_menu_ui.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Roboto-Light.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ServerIp" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -205.0
margin_top = -64.0
margin_right = 205.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 3 )
text = "your ip here"
align = 1
valign = 1

[node name="Multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Create_server" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = 57.0
margin_right = 140.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 1 )
text = "Create server"

[node name="Connect" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = 199.0
margin_right = 140.0
margin_bottom = 281.0
custom_fonts/font = SubResource( 1 )
text = "Connect"

[node name="LineEdit" type="LineEdit" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.0
margin_top = -142.0
margin_right = 204.0
margin_bottom = -96.0
custom_fonts/font = SubResource( 2 )
text = "enter ip adress"
align = 1

[node name="Lobby" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -124.0
margin_right = 213.0
margin_bottom = 95.0

[node name="LobbyList" type="ItemList" parent="Lobby"]
anchor_right = 1.0
anchor_bottom = 1.0
max_text_lines = 2
auto_height = true
max_columns = 2

[node name="StartButton" type="Button" parent="Lobby"]
visible = false
anchor_left = 0.213
anchor_top = 1.26
anchor_right = 0.773
anchor_bottom = 1.703
margin_left = -0.164009
margin_top = 0.059967
margin_right = 0.155975
margin_bottom = 0.0429993
custom_fonts/font = SubResource( 1 )
text = "Start Game"

[connection signal="pressed" from="Multiplayer_configure/Create_server" to="." method="_on_Create_server_pressed"]
[connection signal="pressed" from="Multiplayer_configure/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Lobby/StartButton" to="." method="_on_StartButton_pressed"]
